# configs

./: README.md  mypy.ini  pyproject.toml  ruff.toml
src/configs/: config_file.py  main.py
