[project]
name = "configs"
version = "0.15.0"
description = "My preferred configs for various coding tools"
authors = [{ name = "Danny Stewart", email = "danny@stewart.cc" }]
urls = { repository = "https://github.com/dannystewart/configs" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dsbase (>=0.2.2,<0.3.0)",
    "requests (>=2.32.3,<3.0.0)",
    "types-requests (>=2.32.0.20250306,<3.0.0.0)",
]

[tool.poetry.group.dev.dependencies]
mypy = ">=1.15.0"
ruff = ">=0.11.2"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
code-configs = "configs.main:main"
